Edited README via GitHub

--- a/README
+++ b/README
@@ -1,7 +1,9 @@
 ちょっとテストしております。
 
-gitからないです。。
+gitもgithaubも現状よくわかっていません。。
 
 とりあえずこれから既存に作成してあるflashコンテンツをあげてみようかと思っています。
 
 そもそもそれが出来るのか？？　（－－;）。。。
+
+というレベル、、
