Edited README via GitHub

--- a/README
+++ b/README
@@ -2,8 +2,10 @@
 
 gitもgithaubも現状よくわかっていません。。
 
-とりあえずこれから既存に作成してあるflashコンテンツをあげてみようかと思っています。
+fluxflexがgit依存だというので試しに使用中。
 
-そもそもそれが出来るのか？？　（－－;）。。。
+とりあえずこれから既存のwebアプリをあげてみようかと思っています。
+
+が、そもそもそれが出来るのか？？　（－－;）。。。
 
 というレベル、、
